--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=0.75" />
+  <meta name="viewport" content="width=device-width, initial-scale=calc(430px / 100vw)">
+  <link rel="icon" type="image/png" href="./public/01d@2x.png" />
+
   <title>WeatherInfo</title>
 </head>
 
-<body>
+<body class="bg-gradient-to-br from-orange-100 to-sky-100 bg-no-repeat">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
