--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=calc(100vw / 430px)">
+  <meta name="viewport" content="width=device-width, initial-scale=0.75">
   <link rel="icon" type="image/png" href="./public/01d@2x.png" />
 
   <title>WeatherInfo</title>
