--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.75">
-  <link rel="icon" type="image/png" href="./public/01d@2x.png" />
+  <link rel="icon" type="image/png" href="./01d@2x.png" />
 
   <title>WeatherInfo</title>
 </head>
